# klipper-micro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
docs/: ARCHITECTURE.md  CONFIG.md  HARDWARE.md  PROTOCOL.md
firmware/: README.md
main/: CMakeLists.txt  app_state.c  app_state.h  board.c  heater_control.h  idf_component.yml  klipper_client.c  klipper_clocksync.c  klipper_clocksync.h  klipper_dictionary.c  klipper_dictionary.h  ui.c
scripts/: connect.py  flash.sh  selftest.sh  sync_vendor.sh  test-native.sh  upload.sh
src/: CMakeLists.txt  app_main.c  app_state.c  app_state.h  board.c  board.h  boot.py  config.py  device_selftest.py  heater_control.c  idf_component.yml  klipper_client.h  klipper_dictionary.c  klipper_protocol.c  klipper_protocol.h  main.py  ui.c  ui.h  ui_main_demo.py  ui_smoketest.py  wifi.py
src/proto/: clocksync.py  handshake.py  queue.py  transport.py
src/ui/: display.py  manager.py  mock_state.py  theme.py
src/ui/screens/: main.py  setpoint.py  settings.py  wifi.py
tests/: conftest.py  mock_mcu.py  test_handshake_e2e.py  test_msgproto.py  test_queue.py  test_transport_serial.py
tests/native/: CMakeLists.txt  test_native.c
